# regex-crossword

./: README.md  regex-crossword.cabal
data/: puzzle
solver/: Main.hs
src/Crossword/: Description.hs  Expand.hs  FixedRegex.hs  GenState.hs  Generate.hs  Parser.hs  Puzzle.hs  Regex.hs  Token.hs
