name:                regex-crossword
version:             0.1
synopsis:            Solver for the regular expression crossword puzzle.
homepage:            http://github.com/hesselink/regex-crossword
license:             BSD3
license-file:        LICENSE
author:              Erik Hesselink
maintainer:          hesselink@gmail.com
build-type:          Simple
cabal-version:       >=1.8

library
  build-depends:       base ==4.5.*